...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_edit_text_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_set_password_edit_text_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_confirm_password_edit_text_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_phone_number_edit_text_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginEnd="@dimen/login_card_spacing"
                    android:hint="@string/phone_otp"
                    app:endIconContentDescription="@string/phone_otp_description"
                    app:endIconDrawable="@drawable/refresh_24"
                    app:endIconMode="custom"
                    app:helperText="Check Message Box For The \nEntered Phone Number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/verify_phone_otp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_phone_otp_edit_text_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    app:layout_constraintBottom_toTopOf="@id/clear_phone_otp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email_edit_text_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_marginEnd="@dimen/login_card_spacing"
                    android:hint="@string/email_otp"
                    app:endIconContentDescription="@string/email_otp_description"
                    app:endIconDrawable="@drawable/refresh_24"
                    app:endIconMode="custom"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/verify_email_otp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_email_otp_edit_text_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    app:layout_constraintBottom_toTopOf="@id/clear_email_otp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adhar_card_number_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/voter_id_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/user_use_fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_private_key_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <Button
                    android:id="@+id/register_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
