...
                                android:id="@+id/party_one_radio_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Party One" />

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/party_two_radio_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Party Two" />

                            <androidx.appcompat.widget.AppCompatRadioButton
                                android:id="@+id/party_three_radio_button"
...
                        <TextView
                            android:id="@+id/function_register_vote_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="[registerVote]"
                            android:textAlignment="viewEnd"
                            app:layout_constraintLeft_toRightOf="@id/caste_vote_button"
                            app:layout_constraintRight_toRightOf="@id/party_selector_radio_group"
                            app:layout_constraintTop_toBottomOf="@id/party_selector_radio_group" />

                        <TextView
                            android:id="@+id/caste_vote_output"
                            android:layout_width="0dp"
...
                        <TextView
                            android:id="@+id/function_get_address_values_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="[getAddressValues]"
                            android:textAlignment="viewEnd"
                            app:layout_constraintLeft_toRightOf="@id/get_registered_voters_button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/contract_description_one" />

                        <TextView
                            android:id="@+id/get_registered_voters_output"
                            android:layout_width="0dp"
...
                        <TextView
                            android:id="@+id/function_has_already_voted_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="[getAddressValues]"
                            android:textAlignment="viewEnd"
                            app:layout_constraintLeft_toRightOf="@id/check_voter_status_button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/contract_description_two" />

                        <TextView
                            android:id="@+id/check_voter_status_output"
                            android:layout_width="0dp"
...
                        <TextView
                            android:id="@+id/function_get_party_votes_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="[getParty1Votes]\n[getParty2Votes]\n[getParty3Votes]"
                            android:textAlignment="viewEnd"
                            app:layout_constraintLeft_toRightOf="@id/get_votes_button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/contract_description_three" />

                        <TextView
                            android:id="@+id/party_votes_label"
                            android:layout_width="wrap_content"
...
                        <TextView
                            android:id="@+id/function_add_me_to_voted_list_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="[addMeToVotedList]"
                            android:textAlignment="viewEnd"
                            app:layout_constraintLeft_toRightOf="@id/add_to_voters_list_button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/add_to_voters_list_label" />

                        <TextView
                            android:id="@+id/voters_list_label"
                            android:layout_width="0dp"
...
                            android:id="@+id/user_balance"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text='@{"Balance:-\n"+data_binding_view_model.balance}'
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/small_text"
                            app:layout_constraintLeft_toRightOf="@id/get_balance_button"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/current_balance_label"
                            tools:text="balance:- \n0.987654321 ETH" />

                        <Button
                            android:id="@+id/get_balance_button"
...
