<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:cardBackgroundColor="#eeeeee"
    tools:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_card_spacing"
            android:text="@string/login"
            android:textSize="@dimen/huge_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_card_spacing"
            android:hint="@string/full_name"
            app:endIconDrawable="@drawable/fingerprint_24"
            app:endIconMode="custom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_set_password_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_card_spacing"
            android:hint="@string/enter_password"
            app:endIconMode="password_toggle"
            app:helperText="Use Fingerprint If Enabled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_edit_text"
            app:startIconDrawable="@drawable/number_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_set_password_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_user_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_a_new_user"
            app:layout_constraintLeft_toLeftOf="@id/user_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/user_set_password_edit_text" />

        <Button
            android:id="@+id/cancel_login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_card_spacing"
            android:layout_marginBottom="@dimen/login_card_spacing"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/user_name_edit_text"
            app:layout_constraintRight_toLeftOf="@id/confirm_login"
            app:layout_constraintTop_toBottomOf="@id/new_user_button" />

        <Button
            android:id="@+id/confirm_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_card_spacing"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="@id/cancel_login"
            app:layout_constraintLeft_toRightOf="@id/cancel_login"
            app:layout_constraintRight_toRightOf="@id/user_name_edit_text"
            app:layout_constraintTop_toTopOf="@id/cancel_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
