<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/account_settings"
        android:icon="@drawable/account_box_24"
        android:title="Account Settings"
        app:showAsAction="always" />
</menu>